objects/Quote.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency/Brokerage</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculatedPriceJSON__c</fullName>
        <label>Calculated Price Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CommissionAmount__c</fullName>
        <description>Commission amount calculated for this Quote.</description>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DaysRemaining__c</fullName>
        <description>Difference between end date and effective date, including the end date.</description>
        <formula>vlocity_ins__EndDate__c - vlocity_ins__EffectiveDate__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this quote</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupCensusId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Census</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__GroupCensus__c.vlocity_ins__CensusStatus__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if quote requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Jurisdiction for the Quote.</description>
        <label>Jurisdiction</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipLabel>Quote Jurisdiction</relationshipLabel>
        <relationshipName>QuoteJurisdiction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO (Admin Services Only)</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Mid Sized Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MonthlyPremium__c</fullName>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityAccountId__c</fullName>
        <description>Formula: opportunity&apos;s account identifier casted to a text value.</description>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalFeeForTerm__c</fullName>
        <description>The original total amount of fee that will be collected for this quote over the full term.</description>
        <label>Original Fee for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalPremiumForTerm__c</fullName>
        <description>The original total amount of premium that will be collected for this quote over the full term.</description>
        <label>Original Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalTaxForTerm__c</fullName>
        <description>The original total amount of tax that will be collected for this quote over the full term.</description>
        <label>Original Tax for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentQuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates if this has parent quote. Parent quote here also refers to a master quote.</description>
        <label>Parent Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Using This Price List</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryProductId__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.Product2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quoted Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryRootItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Root Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Parent Quote for Primary Product</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this quote is linked</description>
        <label>Quote Group</label>
        <referenceTo>vlocity_ins__QuoteGroup__c</referenceTo>
        <relationshipLabel>Group Quotes</relationshipLabel>
        <relationshipName>GroupQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingType__c</fullName>
        <label>Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <description>Name of Quote Record Type</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RenewalSourceContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Source Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootItemTotal__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.UnitPrice + vlocity_ins__TotalAdjustmentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset from which Quote is created.</description>
        <label>Source Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TermsofEligibility__c</fullName>
        <label>Terms of Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAdjustmentAmount__c</fullName>
        <description>Manual price adjustments on total price.</description>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmountTermDifference__c</fullName>
        <description>Difference between current and original amount for term.</description>
        <formula>(vlocity_ins__TotalPremiumforTerm__c + vlocity_ins__TotalFeeForTerm__c + vlocity_ins__TotalTaxForTerm__c) - (vlocity_ins__OriginalPremiumForTerm__c + vlocity_ins__OriginalFeeForTerm__c + vlocity_ins__OriginalTaxForTerm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>Total taxes, fees, and price for the Quote.</description>
        <formula>vlocity_ins__TotalTaxAmount__c + vlocity_ins__TotalFeeAmount__c + vlocity_ins__RootItemTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeAmount__c</fullName>
        <description>Total amount of itemized fees for Quote.</description>
        <label>Total Fee Amount</label>
        <summarizedField>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__QuoteId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeForTerm__c</fullName>
        <description>The total amount of fee that will be collected for this quote over the full term.</description>
        <label>Total Fee for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeTermDifference__c</fullName>
        <description>Difference between current and original fee for term.</description>
        <formula>vlocity_ins__TotalFeeForTerm__c - vlocity_ins__OriginalFeeForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumTermDifference__c</fullName>
        <description>Difference between current and original premium for term.</description>
        <formula>vlocity_ins__TotalPremiumforTerm__c - vlocity_ins__OriginalPremiumForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Premium for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumforTerm__c</fullName>
        <description>The total amount of premium that will be collected for this quote over the full term.</description>
        <label>Total Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.vlocity_ins__TotalSumInsured__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxAmount__c</fullName>
        <description>Total amount of itemized taxes for Quote.</description>
        <label>Total Tax Amount</label>
        <summarizedField>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__QuoteId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxForTerm__c</fullName>
        <description>The total amount of tax that will be collected for this quote over the full term.</description>
        <label>Total Tax for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxTermDifference__c</fullName>
        <description>Difference between current and original tax for term.</description>
        <formula>vlocity_ins__TotalTaxForTerm__c - vlocity_ins__OriginalTaxForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                    <default>true</default>
                    <label>New Business</label>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnderwriterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PrimaryProducerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Producer for this Quote.</description>
        <label>Primary Producer</label>
        <referenceTo>Producer</referenceTo>
        <relationshipLabel>Primary Producer for Quote</relationshipLabel>
        <relationshipName>QuotePrimaryProducers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProductionCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Production Code of the Primary Producer for this Quote.</description>
        <label>Production Code</label>
        <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
        <relationshipLabel>Production Code for Quote</relationshipLabel>
        <relationshipName>QuoteProductionCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__SourceInsurancePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance Policy from which Quote is created.</description>
        <label>Source Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__SourcePremiumFrequency__c</fullName>
        <description>Premium Frequency of the Source Insurance Policy from which Quote is created.</description>
        <formula>TEXT(vlocity_ins_fsc__SourceInsurancePolicyId__r.PremiumFrequency)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Premium Frequency</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>vlocity_ins__EffectiveDate__c</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>vlocity_ins__ProducerId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_ins__LargeGroupQuote</fullName>
        <active>true</active>
        <label>Large Group Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__SmallGroupQuote</fullName>
        <active>true</active>
        <label>Small Group Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>